loading saved model

--- a/train.ipynb
+++ b/train.ipynb
@@ -4,7 +4,33 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-18 20:09:15.997468: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:9342] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-11-18 20:09:15.997533: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-11-18 20:09:15.997910: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1518] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-11-18 20:09:16.038589: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:1', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:2', device_type='GPU'), PhysicalDevice(name='/physical_device:GPU:3', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-11-18 20:09:18.719001: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1886] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 79078 MB memory:  -> device: 1, name: NVIDIA A100 80GB PCIe, pci bus id: 0000:24:00.0, compute capability: 8.0\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "\n",
@@ -29,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,24 +76,25 @@
     "from rsnn_functions.belief_mass_betp import belief_to_mass, mass_coeff, final_betp\n",
     "from rsnn_functions.rsnn_loss import BinaryCrossEntropy\n",
     "\n",
-    "from utils.train_utils import lr_schedule, train_val_split, data_generator, lr_callbacks, save_model_and_weights"
+    "from utils.train_utils import lr_schedule, train_val_split, data_generator, lr_callbacks, save_model_and_weights\n",
+    "from utils.eval_utils import load_model, load_all_predictions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initializing parameters \n",
     "k = 20  #number of number of non-singleton focal sets \n",
     "batch_size = 128\n",
-    "epochs = 100"
+    "epochs = 200"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,9 +130,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classes: ['airplane', 'automobile', 'bird', 'cat', 'deer', 'dog', 'frog', 'horse', 'ship', 'truck']\n",
+      "Shape of x_train: (40000, 32, 32, 3)\n",
+      "Shape of x_test: (10000, 32, 32, 3)\n",
+      "Shape of x_val: (10000, 32, 32, 3)\n"
+     ]
+    }
+   ],
    "source": [
     "# Define configurations\n",
     "selected_dataset = \"cifar10\"  # Choose the dataset\n",
@@ -152,11 +190,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\" \n",
+    "Load saved CNN model\n",
+    "\"\"\"\n",
+    "# For single-GPU run, comment with strategy.scope():\n",
     "# Multi-GPU run\n",
     "with strategy.scope():      \n",
     "    # Create the model based on selected_model\n",
     "    if selected_model in pretrained_models:\n",
-    "        model = pretrained_models[selected_model](input_shape=input_shape,  num_classes=num_classes[selected_dataset], final_activation='softmax')\n",
+    "        model = pretrained_models[selected_model](input_shape=input_shape, num_classes=num_classes[selected_dataset], final_activation='softmax')\n",
     "    else:\n",
     "        model = models[selected_model](input_shape=input_shape, num_classes=num_classes[selected_dataset], final_activation='softmax')\n",
     "\n",
@@ -165,18 +207,7 @@
     "                optimizer=\"adam\",\n",
     "                metrics=['accuracy'])\n",
     "\n",
-    "model.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "history = model.fit(datagen.flow(x_train, y_train_one_hot, batch_size=batch_size),\n",
-    "                    validation_data=(x_val, y_val_one_hot),\n",
-    "                    epochs=epochs, verbose=1, workers=2)"
+    "model = load_model(selected_model, selected_dataset, model_type = \"CNN\")"
    ]
   },
   {
@@ -267,6 +298,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# For single-GPU run, comment with strategy.scope():\n",
     "# Multi-GPU run\n",
     "with strategy.scope():      \n",
     "    # Create the model based on selected_model\n",
